--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "karma": "^0.13.19",
     "karma-firefox-launcher": "^0.1.7",
     "karma-chrome-launcher": "^0.2.2",
-    "karma-cljs-test": "^0.1.0"
+    "karma-cljs-test": "^0.1.0",
     "autoprefixer": "^6.3.6",
     "babel-core": "^6.10.4",
     "babel-preset-es2015": "^6.0.15",
