--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "untangled-stylekit",
+  "name": "untangled-ui",
   "version": "1.6.0",
   "description": "A PostCSS Framework for web apps",
   "author": "NAVIS",
   "license": "Copyright NAVIS, using the MIT public license.",
-  "main": "src/main/css/stylekit.css",
+  "main": "src/main/css/untangled-ui-stylekit.css",
   "devDependencies": {
     "karma": "^0.13.19",
     "karma-firefox-launcher": "^0.1.7",
