updated dropdown to follow established standards

--- a/package.json
+++ b/package.json
@@ -62,7 +62,8 @@
     "sw-precache": "^4.3.0"
   },
   "dependencies": {
-    "modernizr": "^3.2.0"
+    "modernizr": "^3.2.0",
+    "react-frame-component": "^1.0.0"
   },
   "repository": {
     "type": "git",
