--- a/.gitignore
+++ b/.gitignore
@@ -2,14 +2,12 @@ target
 resources/private/js
 resources/public/js
 *.iml
-!.idea/runConfigurations
-.idea
 node_modules
-target
 pom.xml
 figwheel_server.log
 checkouts
-!.idea/runConfigurations
 *.lock
 dist/*.*
 .nrepl*
+/.idea
+!/.idea/runConfigurations/Figwheel.xml
