--- a/package.json
+++ b/package.json
@@ -6,10 +6,6 @@
   "license": "Copyright NAVIS, using the MIT public license.",
   "main": "src/main/css/untangled-ui-stylekit.css",
   "devDependencies": {
-    "karma": "^0.13.19",
-    "karma-firefox-launcher": "^0.1.7",
-    "karma-chrome-launcher": "^0.2.2",
-    "karma-cljs-test": "^0.1.0",
     "autoprefixer": "^6.3.6",
     "babel-core": "^6.10.4",
     "babel-preset-es2015": "^6.0.15",
@@ -38,10 +34,15 @@
     "gulp-useref": "^3.0.0",
     "gulp-util": "^3.0.7",
     "gulp-zip": "^4.0.0",
+    "karma": "^0.13.19",
+    "karma-chrome-launcher": "^0.2.2",
+    "karma-cljs-test": "^0.1.0",
+    "karma-firefox-launcher": "^0.1.7",
     "merge-stream": "^1.0.1",
     "postcss": "^5.0.14",
     "postcss-apply": "^0.4.0",
     "postcss-calc": "^5.2.0",
+    "postcss-color-function": "^3.0.0",
     "postcss-css-variables": "^0.6.0",
     "postcss-custom-media": "^5.0.0",
     "postcss-custom-selectors": "^3.0.0",
