--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "A PostCSS Framework for web apps",
   "version": "0.1.0",
   "repository": "untangled-web/untangled-ui",
-  "author": "NAVIS <support@thenavisway.com> (http://thenavisway.com/)",
+  "author": "Stephen Way <scway@thenavisway.com> (http://stephenway.net)",
   "license": "MIT",
   "main": "src/main/css/untangled-ui.css",
   "devDependencies": {
